fix: Update _typos.toml to ignore Gti

--- a/_typos.toml
+++ b/_typos.toml
@@ -13,7 +13,8 @@ extend-ignore-re = [
     "lIYEY.*",
     "mDMEYi.*",
     "WRONLY",
-    "nce"
+    "nce",
+    "Gti"
 ]
 
 [default.extend-words]
