feat: Add build-dependencies support to cargo autodiscovery
Right now it handles regular and dev dependencies, but not build
dependencies, which just get skipped.

--- a/pkg/plugins/autodiscovery/cargo/testdata/workspace/Cargo.toml
+++ b/pkg/plugins/autodiscovery/cargo/testdata/workspace/Cargo.toml
@@ -8,3 +8,7 @@ members = [
 [workspace.dependencies]
 anyhow = "1"
 itoa = { git = "https://github.com/dtolnay/itoa", rev = "1.0.15" }
+
+[workspace.build-dependencies]
+built = "0.8.0"
+
