--- a/pkg/plugins/autodiscovery/cargo/testdata/simple_crate/Cargo.toml
+++ b/pkg/plugins/autodiscovery/cargo/testdata/simple_crate/Cargo.toml
@@ -7,8 +7,10 @@ version = "0.1.0"
 anyhow = "1.0.1"
 rand = { version = "0.8.0" }
 itoa = { git = "https://github.com/dtolnay/itoa", rev = "1.0.15" }
+
+[build-dependencies]
+built = "0.8.0"
+
 [dev-dependencies]
 futures = { version = "0.3.21" }
-
-
 
