--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -21,11 +21,13 @@ jobs:
     steps:
       - name: free disk space
         run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
           sudo swapoff -a
           sudo rm -f /swapfile
           sudo apt clean
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
           df -h
-          docker rmi $(docker image ls -aq)
 
       # https://github.com/actions/setup-go
       - name: Set up Go
