--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -19,6 +19,16 @@ jobs:
     permissions:
       contents: read
     steps:
+      - name: free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo swapoff -a
+          sudo rm -f /swapfile
+          sudo apt clean
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
+          df -h
+
       # https://github.com/actions/setup-go
       - name: Set up Go
         uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6.0.0
