--- a/e2e/updatecli.d/success.d/autodiscovery/npm/npm.versionfilter.yaml
+++ b/e2e/updatecli.d/success.d/autodiscovery/npm/npm.versionfilter.yaml
@@ -1,7 +1,7 @@
 name: "NPM autodiscovery using git scm"
 scms:
   #default:
-  #  kind: git 
+  #  kind: git
   #  spec:
   #    url: https://github.com/olblak/plugin-site.git
   #    branch: master
@@ -11,27 +11,28 @@ scms:
     kind: github
     spec:
       owner: updatecli
-      #repository: plugin-site
-      #branch: master
       repository: app-dashboard
-      token: {{ requiredEnv "GITHUB_TOKEN" }}
-      username: {{ requiredEnv "GITHUB_ACTOR" }}
+      token: '{{ requiredEnv "GITHUB_TOKEN" }}'
+      username: '{{ requiredEnv "GITHUB_ACTOR" }}'
       branch: main
 
 actions:
-    default:
-        kind: github/pullrequest
-        scmid: default
-        
+  default:
+    kind: github/pullrequest
+    scmid: default
+
 autodiscovery:
-  # scmid is applied to all crawlers
   scmid: default
-  actionid:  default
+  actionid: default
   groupby: all
   #groupby: individual
   crawlers:
     npm:
+      ignoreVersionConstraints: true
       versionfilter:
         kind: semver
         pattern: "majoronly"
-
+      only:
+        - packages:
+            "axios": ""
+            "core-js": ""
