--- a/e2e/updatecli.d/success.d/autodiscovery/dockerfile/versionfilter.yaml
+++ b/e2e/updatecli.d/success.d/autodiscovery/dockerfile/versionfilter.yaml
@@ -5,7 +5,7 @@ scms:
     spec:
       url: https://github.com/jenkinsci/docker.git
       branch: master
-    
+
 autodiscovery:
   # scmid is applied to all crawlers
   scmid: jenkins-infra-weekly
@@ -18,6 +18,7 @@ autodiscovery:
             - "alpine"
             - "bats-jenkins"
             - "mcr.microsoft.com/windows/servercore"
+            - "bats-jenkins-plugins-cli"
       versionfilter:
         kind: semver
         pattern: majoronly
