chore Change cron schedule to run weekly on Saturdays

--- a/.github/workflows/updatecli.yaml
+++ b/.github/workflows/updatecli.yaml
@@ -7,8 +7,8 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    # Run every hour
-    - cron: "0 * * * *"
+    # Run at 12:00 every Saterday
+    - cron: '0 12 * * 6'
 permissions: {}
 jobs:
   updatecli:
