--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -47,6 +47,14 @@ jobs:
           # we always use the latest patch version.
           version: v2.6.2
           install-mode: "binary"
+      - uses: "pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061" # v4.2.2
+        with:
+          version: "10.24.0"
+          run_install: false
+      - name: Install Node.js
+        uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
+        with:
+          node-version: "25.2.1"
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
         with:
