chore: make node updatecli pipeline more robust
Signed-off-by: Olblak <me@olblak.com>

--- a/updatecli/updatecli.d/node.yaml
+++ b/updatecli/updatecli.d/node.yaml
@@ -1,9 +1,9 @@
-name: 'chore(node): upgrade node version'
-{{- if .scm.enabled }}
+name: "chore(node): upgrade node version"
+#{{- if .scm.enabled }}
 actions:
   default:
-    kind: 'github/pullrequest'
-    title: 'chore(dockerfile): upgrade node version'
+    kind: "github/pullrequest"
+    title: "chore(dockerfile): upgrade node version"
     spec:
       automerge: true
       labels:
@@ -22,15 +22,15 @@ scms:
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       user: "{{ .scm.user }}"
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
-{{- end }}
+#{{- end }}
 
 sources:
   node_version:
     kind: githubrelease
     spec:
-      owner: 'nodejs'
-      repository: 'node'
-      versionFilter:
+      owner: "nodejs"
+      repository: "node"
+      versionfilter:
         kind: semver
     transformers:
       - trimprefix: v
@@ -41,8 +41,8 @@ sources:
     spec:
       owner: pnpm
       repository: pnpm
-    versionFilter:
-      kind: semver
+      versionfilter:
+        kind: semver
     transformers:
       - trimprefix: v
 
@@ -50,22 +50,24 @@ targets:
   pnpm_gha_updatecli:
     name: 'deps: update pnpm version to {{ source "pnpm" }}"'
     kind: yaml
-    {{- if .scm.enabled }}
+    #{{- if .scm.enabled }}
     scmid: default
-    {{- end }}
+    #{{- end }}
     sourceid: pnpm
     spec:
-      file: '.github/workflows/go.yaml'
-      key: '$.jobs.build.steps[4].with.version'
-      engine: 'yamlpath'
+      file: ".github/workflows/*.yaml"
+      searchpattern: true
+      key: '$.jobs.*.steps[?(@.uses =~ /^pnpm\/action-setup/)].with.version'
+      engine: "yamlpath"
   node_gha_updatecli:
     name: 'deps: update node version to {{ source "node_version" }}"'
     kind: yaml
-    {{- if .scm.enabled }}
+    #{{- if .scm.enabled }}
     scmid: default
-    {{- end }}
+    #{{- end }}
     sourceid: node_version
     spec:
-      file: '.github/workflows/go.yaml'
-      key: '$.jobs.build.steps[5].with.node-version'
-      engine: 'yamlpath'
+      file: ".github/workflows/*.yaml"
+      searchpattern: true
+      key: '$.jobs.*.steps[?(@.uses =~ /^actions\/setup-node/)].with.node-version'
+      engine: "yamlpath"
