chore(ci): Update typos action to version 1.42.0

--- a/.github/workflows/typos.yaml
+++ b/.github/workflows/typos.yaml
@@ -11,4 +11,4 @@ jobs:
       - name: Checkout Actions Repository
         uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
       - name: Check spelling of file.txt
-        uses: crate-ci/typos@d6b38c8b48913f417c9449cd83833b41535b0c54 # renovate/stable-1.x
+        uses: crate-ci/typos@v1.42.0
