--- a/e2e/updatecli.d/success.d/autodiscovery/nomad/updatecli.yaml
+++ b/e2e/updatecli.d/success.d/autodiscovery/nomad/updatecli.yaml
@@ -5,8 +5,6 @@ scms:
     spec:
       owner: updatecli-test
       repository: nomad-demo
-      token: '{{ requiredEnv "GITHUB_TOKEN" }}'
-      username: '{{ requiredEnv "GITHUB_ACTOR" }}'
       branch: master
 
 actions:
@@ -23,5 +21,4 @@ autodiscovery:
   crawlers:
     nomad:
       only:
-        - path: 'nomad_jobs/monitoring-grafana.nomad'
-
+        - path: "nomad_jobs/monitoring-grafana.nomad"
