feat: add new template for info_only.txt and update Spec documentation

--- a/e2e/updatecli.d/success.d/file_template.yaml
+++ b/e2e/updatecli.d/success.d/file_template.yaml
@@ -40,3 +40,15 @@ targets:
         Date: '{{ source "date" }}'
     sourceid: appVersion
 
+  templateWithOnlyTemplateData:
+    name: Create info_only.txt using Go template with only .TemplateData from file
+    kind: file
+    spec:
+      file: info.txt
+      template: templates/info.tmpl
+      templatedata:
+        ServiceName: MyService
+        Version: '{{ source "appVersion" }}'
+      forcecreate: true
+    disablesourceinput: true
+
