fix: dockercompose autodiscovery ignore env variable
Signed-off-by: Olblak <me@olblak.com>

--- a/pkg/plugins/autodiscovery/dockercompose/testdata/docker-compose.yaml
+++ b/pkg/plugins/autodiscovery/dockercompose/testdata/docker-compose.yaml
@@ -8,6 +8,11 @@ services:
     ports:
       - "8080:8080"
   jenkins-lts:
-    image: jenkinsci/jenkins:2.150.1-alpine@256:1fafb0905264413501df60d90a92ca32df8a2011cbfb4876ddff5ceb20c8f165
+    image: jenkinsci/jenkins:2.150.1-alpine@sha256:1c626c48537129ad375832cd961d6ecd4eb8aa3866f24ab23c57c21bd6d81f3f
+    ports:
+      - "8080:8080"
+
+  postgres:
+    image: ${IMAGE_PREFIX}/safeline-postgres${ARCH_SUFFIX}:15.2
     ports:
       - "8080:8080"
