--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-go@4dc6199c7b1a012772edbd06daecab0f50c9053c # v6.1.0
         with:
           cache: false
-          go-version: 1.25.7
+          go-version: 1.26.0
         id: go
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
@@ -85,7 +85,12 @@ jobs:
     needs: build
     strategy:
       matrix:
-        repositories: ["updatecli/website", "updatecli/updatecli-action", "updatecli/charts"]
+        repositories:
+          [
+            "updatecli/website",
+            "updatecli/updatecli-action",
+            "updatecli/charts",
+          ]
     runs-on: ubuntu-latest
     steps:
       - name: Generate access token
