--- a/pkg/plugins/autodiscovery/dockercompose/testdata/compose.yaml
+++ b/pkg/plugins/autodiscovery/dockercompose/testdata/compose.yaml
@@ -1,8 +1,6 @@
 services:
-  # The jenkinsci/jenkins is deprecated and so won't be updated
-  # So the test shouldn't fail in the future
-  jenkins-weekly:
-    image: jenkinsci/jenkins:2.254-alpine
-    platform: linux/amd64
+  # just fake services to test the file matching pattern
+  fake-service:
+    image: ${IMAGE_PREFIX}/safeline-postgres${ARCH_SUFFIX}:15.2
     ports:
       - "8080:8080"
